# vector_gwas_exploration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_simulation.ipynb  02_mixed_effects_analysis.ipynb  03_candidate_gene_study_and_fixation_analysis.ipynb  04_gwas_scan.ipynb  05_mixed_effects_simulation.ipynb  06_bayesian_model_simulation.ipynb  07_gwas_scan_negative_control.ipynb  08_generate_mock_data.ipynb
src/analysis/: gwas.py
src/analysis/gwas/: scanner.py  verifier.py
src/data/: generate_mock_data.py  simulation.py
src/models/: bayesian_model.py  logistic_regression.py  mixed_effects.py
src/utils/: analysis_utils.py  gwas_utils.py  phenotype_utils.py
src/viz/: build_explorer.py
